--- a/pcsx2/pcsx2.vcxproj
+++ b/pcsx2/pcsx2.vcxproj
@@ -332,6 +332,8 @@
     <ClCompile Include="IopGte.cpp" />
     <ClCompile Include="IPC.cpp" />
     <ClCompile Include="FW.cpp" />
+    <ClCompile Include="Memcard\MemcardConfig.cpp" />
+    <ClCompile Include="Memcard\MemcardConfigSlot.cpp" />
     <ClCompile Include="Memcard\PS1\MemcardPS1.cpp" />
     <ClCompile Include="Memcard\PS1\MemcardPS1Protocol.cpp" />
     <ClCompile Include="Memcard\PS2\MemcardPS2.cpp" />
@@ -783,6 +785,8 @@
     <ClInclude Include="IopGte.h" />
     <ClInclude Include="IPC.h" />
     <ClInclude Include="FW.h" />
+    <ClInclude Include="Memcard\MemcardConfig.h" />
+    <ClInclude Include="Memcard\MemcardConfigSlot.h" />
     <ClInclude Include="Memcard\PS1\MemcardPS1.h" />
     <ClInclude Include="Memcard\PS1\MemcardPS1Protocol.h" />
     <ClInclude Include="Memcard\PS1\MemcardPS1Types.h" />
