--- a/pcsx2/pcsx2.vcxproj.filters
+++ b/pcsx2/pcsx2.vcxproj.filters
@@ -1710,6 +1710,9 @@
     <ClCompile Include="Memcard\MemcardConfigSlot.cpp">
       <Filter>System\Ps2\Memcard</Filter>
     </ClCompile>
+    <ClCompile Include="Multitap\MultitapConfig.cpp">
+      <Filter>System\Ps2\Multitap</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Patch.h">
@@ -2898,6 +2901,9 @@
     </ClInclude>
     <ClInclude Include="DirectoryHelper.h">
       <Filter>AppHost</Filter>
+    </ClInclude>
+    <ClInclude Include="Multitap\MultitapConfig.h">
+      <Filter>System\Ps2\Multitap</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
