--- a/pcsx2/pcsx2.vcxproj
+++ b/pcsx2/pcsx2.vcxproj
@@ -332,6 +332,7 @@
     <ClCompile Include="IopGte.cpp" />
     <ClCompile Include="IPC.cpp" />
     <ClCompile Include="FW.cpp" />
+    <ClCompile Include="Memcard\Memcard.cpp" />
     <ClCompile Include="Memcard\MemcardConfig.cpp" />
     <ClCompile Include="Memcard\MemcardConfigSlot.cpp" />
     <ClCompile Include="Memcard\PS1\MemcardPS1.cpp" />
@@ -368,6 +369,7 @@
     <ClCompile Include="Recording\Utilities\InputRecordingLogger.cpp" />
     <ClCompile Include="Sio0.cpp" />
     <ClCompile Include="Sio2.cpp" />
+    <ClCompile Include="SioCommon.cpp" />
     <ClCompile Include="SPU2\DplIIdecoder.cpp" />
     <ClCompile Include="SPU2\debug.cpp" />
     <ClCompile Include="SPU2\RegLog.cpp" />
@@ -787,8 +789,10 @@
     <ClInclude Include="IopGte.h" />
     <ClInclude Include="IPC.h" />
     <ClInclude Include="FW.h" />
+    <ClInclude Include="Memcard\Memcard.h" />
     <ClInclude Include="Memcard\MemcardConfig.h" />
     <ClInclude Include="Memcard\MemcardConfigSlot.h" />
+    <ClInclude Include="Memcard\MemcardTypes.h" />
     <ClInclude Include="Memcard\PS1\MemcardPS1.h" />
     <ClInclude Include="Memcard\PS1\MemcardPS1Protocol.h" />
     <ClInclude Include="Memcard\PS1\MemcardPS1Types.h" />
@@ -836,6 +840,7 @@
     <ClInclude Include="Sio0Types.h" />
     <ClInclude Include="Sio2.h" />
     <ClInclude Include="Sio2Types.h" />
+    <ClInclude Include="SioCommon.h" />
     <ClInclude Include="SioTypes.h" />
     <ClInclude Include="SPU2\Config.h" />
     <ClInclude Include="SPU2\Global.h" />
